--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -77,7 +77,7 @@ jobs:
           ReleseNotes=$(awk "/$StartLine/,/$EndLine/" $ReleaseNotesFile | sed 1d | sed '$ d')
           echo "Release notest from file: $ReleseNotes"
           # Put release notes into output path
-          echo "$ReleseNotes" >> /out/ReleaseNotes.md
+          echo "$ReleseNotes" >> $GITHUB_WORKSPACE/out/ReleaseNotes.md
 
       - name: Make release in Github
         uses: actions/create-release@v1
