--- a/.github/workflows/release2github.yml
+++ b/.github/workflows/release2github.yml
@@ -80,6 +80,10 @@ jobs:
           Organization="mendix"
           Project="WorkflowCommons"
           ReleaseNotesFile="ReleaseNotes.md"
+          if [! -f "$ReleaseNotesFile" ]; then 
+              echo "Unable to find file \"ReleaseNotes.md\""
+              exit 1; 
+          fi
           ReleaseTag=$(curl https://api.github.com/repos/$Organization/$Project/releases/latest -s | jq .tag_name -r | tr -d '[:space:]')
           echo "Detected release tag in github:\"$ReleaseTag\""
           cd $GITHUB_WORKSPACE/app
