--- a/.github/workflows/release2github.yml
+++ b/.github/workflows/release2github.yml
@@ -1,4 +1,4 @@
-name: Mendix WorkflowCommons autorelease
+name: Create GitHub release
 
 # Controls when the workflow will run
 on:
@@ -15,17 +15,17 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out current repository under $GITHUB_WORKSPACE/app folder
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@e2f20e631ae6d7dd3b768f56a5d2af784dd54791 # v2
         with:
           path: 'app'
 
       # Checks-out mendix/docker-mendix-buildpack to $GITHUB_WORKSPACE/build-pack folder
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@e2f20e631ae6d7dd3b768f56a5d2af784dd54791 # v2
         with:
           repository: 'mendix/docker-mendix-buildpack'
           path: 'build-pack'
 
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@e2f20e631ae6d7dd3b768f56a5d2af784dd54791 # v2
         with:
           repository: 'mendixlabs/mx-docker-tools'
           path: 'mx-tools'
@@ -36,28 +36,12 @@ jobs:
           VERSION=$(sqlite3 ExpenseRequestStarterApp.mpr 'SELECT _ProductVersion FROM _MetaData LIMIT 1')
           echo "Detected MX Version:$VERSION"
           echo "MX_VERSION=$VERSION" >> $GITHUB_ENV
-
-      - name: Create build directory
-        run: mkdir build-pack/build
       
       - name: Create output directory
         run: mkdir $GITHUB_WORKSPACE/out
 
-      - name: Copy application files to build directory
-        run: cp -v -r app/Source/. build-pack/build
 
-      - name: Build docker image
-        run: |
-          cd build-pack
-          make build-image
-
-      - name: Run docker image
-        run: |
-          cd build-pack
-          make run-container &
-          timeout 60s bash -c 'until curl -s http://localhost:8080 | grep "<title>Mendix</title>"; do sleep 5; done'
-
-      - name: Check Release notes and make new release tag
+      - name: Check release notes and make new release tag
         run: |
           Organization="mendix"
           Project="WorkflowCommons"
@@ -67,13 +51,13 @@ jobs:
               echo "Unable to find file \"$ReleaseNotesFile\""
               exit 1; 
           fi
-          # Get release teags using public API
+          # Get release tags using public API
           ReleaseTag=$(curl https://api.github.com/repos/$Organization/$Project/releases/latest -s | jq .tag_name -r | tr -d '[:space:]')
           echo "Detected release tag in github:\"$ReleaseTag\""
           DeclaredRelease=$(sed -n 's/^## Release //p' $ReleaseNotesFile | head -n 1 | tr -d '[:space:]')
           echo "Declared release in the local file:\"$DeclaredRelease\""
           if [ "$ReleaseTag" == "$DeclaredRelease" ]; then
-            echo "There are no new changes in the file \"$ReleaseNotesFile\". Please add new version and release notes into this file before make a merge request."
+            echo "There are no new changes in the file \"$ReleaseNotesFile\". Please add new version and release notes into this file before making a merge request."
             exit 1; 
           fi
           # Put release version into env variable
@@ -83,11 +67,11 @@ jobs:
           echo "NEW_RELEASE_BIN_FILE=$BinaryFileName" >> $GITHUB_ENV
           StartLine="## Release $DeclaredRelease"
           EndLine="_______"
-          # Get release notes using "awk" and truncate first and last lines usin "sed"
-          ReleseNotes=$(awk "/$StartLine/,/$EndLine/" $ReleaseNotesFile | sed 1d | sed '$ d')
-          echo "Release notest from file: $ReleseNotes"
+          # Get release notes using "awk" and truncate first and last lines using "sed"
+          ReleaseNotes=$(awk "/$StartLine/,/$EndLine/" $ReleaseNotesFile | sed 1d | sed '$ d')
+          echo "Release notest from file: $ReleaseNotes"
           # Put release notes into output path
-          echo "$ReleseNotes" | tee $GITHUB_WORKSPACE/out/ReleaseNotes.md
+          echo "$ReleaseNotes" | tee $GITHUB_WORKSPACE/out/ReleaseNotes.md
 
       - name: Build MX Util
         run: |
@@ -137,16 +121,16 @@ jobs:
         if: github.event_name != 'pull_request'
         run: |
             cd $GITHUB_WORKSPACE/app/Releases
-            git config --global user.name 'Github Workflow'
+            git config --global user.name 'GitHub Workflow'
             git config --global user.email 'noreply@github.com'
             git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
             git add ${{env.NEW_RELEASE_BIN_FILE}}
-            git commit -am "Made relaes WorkflowCommons v. ${{env.NEW_RELEASE_VERSION}}"
+            git commit -am "Auto-release WorkflowCommons v${{env.NEW_RELEASE_VERSION}}"
             git push
 
       - name: Make release in Github
         if: github.event_name != 'pull_request'
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@1e07f4398721186383de40550babbdf2b84acfc5 # v1
         with:
           body_path: ./out/ReleaseNotes.md
           token: ${{ secrets.GITHUB_TOKEN }}
@@ -162,7 +146,7 @@ jobs:
 
       - name: Archive results
         if: ${{ always() }}
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@82c141cc518b40d92cc801eee768e7aafc9c2fa2 # v2
         with:
           name: Results
           path: ${{ github.workspace }}/out/*
